--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,30 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+	"short_name": "Cantonese App",
+	"name": "Cantonese Learning App",
+	"icons": [
+		{
+			"src": "120.png",
+			"type": "image/png",
+			"sizes": "120x120"
+		},
+		{
+			"src": "152.png",
+			"type": "image/png",
+			"sizes": "152x152"
+		},
+		{
+			"src": "180.png",
+			"type": "image/png",
+			"sizes": "180x180"
+		},
+		{
+			"src": "logo.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		}
+	],
+	"start_url": ".",
+	"display": "standalone",
+	"theme_color": "#292A37",
+	"background_color": "#ffffff"
 }
